fix fonts, fix images references

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
   <meta name="description" content="A clean one page template boilerplate ready to launch">
   <meta name="keywords" content="html, template, webpack, javascript, sass, scss, bootstrap, heroku">
 
-  <link rel="index" title="Rocket Science" href="https://www.rocketscience.io/">
-  <link href="assets/styles/main.css" rel="stylesheet">
+  <link rel="index" title="Rocket Science" href="https://www.rocketsciencebv.nl/">
 </head>
 
 <body id="page-top">
